--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "name": "Anti-Messaggero",
-  "version": "1.0.4",
-  "description": "Automatically remove the overlay that blocks a user from reading an article.",
+  "version": "1.0.5",
+  "description": "Automatically remove the paywall that blocks a user from reading an article and the pop-up containing the video attached to it.",
   "homepage_url": "https://github.com/lorenzodb1/anti-messaggero",
   "icons": {
     "32": "icons/icon-32.png",
@@ -15,7 +15,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.ilmessaggero.it/*/*"],
-      "js": ["jquery-3.2.1.min.js","antimessaggero.js"]
+      "js": ["jquery-3.3.1.js","antimessaggero.js"]
     }
   ]
 }
